Add XmlDocument; Split header and cpp;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,22 @@ project(nal_parser)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCES main.cpp BlockingQueue.h Arguments.h Chunk.h ChunkReader.h NalParser.h)
+if( GCC OR MINGW )
+    set(CMAKE_CXX_FLAGS "-Wreturn-type -Werror=return-type")
+endif()
+
+set(SOURCES
+        main.cpp
+        BlockingQueue.h
+        Arguments.h
+        Chunk.h
+        Chunk.cpp
+        ChunkReader.h
+        ChunkReader.cpp
+        NalParser.h
+        NalParser.cpp
+        XmlDocument.h
+        XmlDocument.cpp
+        NalUnit.h)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
