--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 project(nalparser)
 
+find_package(Threads)
+
 set(CMAKE_CXX_STANDARD 14)
 
 if( GCC OR MINGW )
@@ -21,3 +23,4 @@ set(SOURCES
         XmlDocument.h XmlDocument.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
