--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,19 @@
 language: cpp
 
+sudo: required
+dist: trusty
+
+addons:
+  apt:
+    sources:
+    # add PPAs with more up-to-date toolchains
+    - ubuntu-toolchain-r-test
+    - llvm-toolchain-precise-3.6
+    packages:
+    # install toolchains
+    - gcc-5
+    - g++-5
+
 script:
   - cmake .
   - cmake --build .
